--- a/app/views/storefront/items_by_category.html.erb
+++ b/app/views/storefront/items_by_category.html.erb
@@ -1,2 +1,5 @@
-<h1>Storefront#items_by_category</h1>
-<p>Find me in app/views/storefront/items_by_category.html.erb</p>
+<h1>This is our <% Category.name %> department</h1>
+
+<div>	
+ 		<%= render 'productloop' %>
+</div>
